--- a/gold/flexbox/index.css
+++ b/gold/flexbox/index.css
@@ -1,6 +1,22 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   color: #000;
+  margin-left: 16px;
+  margin-right: 16px;
+  height: 200vh;
+}
+
+@media screen and (min-width: 1440px) {
+  body {
+    margin-left: 136px;
+    margin-right: 136px;
+  }
+}
+
+.card-container {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .card {
@@ -8,6 +24,11 @@ body {
   font-weight: 700;
   border-radius: 8px;
   border: 1px solid #d0d0d0;
+  /* margin-bottom: 16px;
+
+  &:last-child {
+    margin-bottom: 0px;
+  } */
 }
 
 .card-icon {
@@ -17,6 +38,7 @@ body {
 .card-title {
   font-size: 16px;
   line-height: 24px;
+  margin-bottom: 16px;
 }
 
 .card-desc {
@@ -24,21 +46,66 @@ body {
   line-height: 20px;
 }
 
+@media screen and (min-width: 1440px) {
+  .card-container {
+    flex-direction: row;
+    gap: 32px;
+    justify-content: space-between;
+  }
+
+  .card {
+    width: 268px;
+  }
+}
+
 .footer {
   font-size: 14px;
   line-height: 20px;
+  width: 268px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer {
+    flex-direction: row;
+    justify-content: space-between;
+    width: initial;
+  }
 }
 
 .contact-info {
   font-weight: 700;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  margin-bottom: 16px;
+}
+
+.footer-section {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-section {
+    width: 268px;
+  }
+
+  .navigation {
+    width: 79px;
+  }
+}
+
+.bold {
+  font-weight: 700;
 }
 
 .social-media {
-  font-weight: 700;
-}
-
-.copyright {
-  font-weight: 700;
+  display: flex;
+  gap: 16px;
 }
 
 .block {
